test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/negate_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  -
  (
  void
  )
  const int(10)
  ;
  return
  const int(0)
  ;
  }
